# xen-guest-agent

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  Cross.toml  README.md  apt-ftparchive.conf  xen-guest-agent.spec  xen-guest-agent.spec.in
.github/workflows/: rust-clippy.yml
debian/: .gitignore  README.source  changelog  changelog.in  control  copyright  rules  xen-guest-agent.docs  xen-guest-agent.service
devscripts/: cargo-freebsd-netlink.toml  freebsd-fetch-package.sh  get-builddeps-centos7.sh  gitlab-ci-runbuild.sh
doc/: cross-build.md  release.md  structure.md
src/: collector_memory.rs  collector_memory_bsd.rs  collector_memory_linux.rs  collector_net.rs  collector_net_netlink.rs  collector_net_pnet.rs  datastructs.rs  error.rs  hypervisor.rs  hypervisor_linux.rs  main.rs  publisher.rs  publisher_xenstore-rfc.rs  publisher_xenstore-std.rs  publisher_xenstore.rs  unix_helpers.rs  vif_detect.rs  vif_detect_freebsd.rs  vif_detect_linux.rs  xenstore_schema_rfc.rs  xenstore_schema_std.rs
startup/: xen-guest-agent.service
