[package]
name = "xen-guest-agent"
version = "0.2.0-dev"
authors = ["Yann Dirson <yann.dirson@vates.fr>"]
edition = "2018"
rust-version = "1.64"
license = "AGPL-3.0-only"

[dependencies]
futures = "0.3.26"
libc = "0.2.139"
tokio = { version = "1.25.0", features = ["full"] }
netlink-packet-core = { version = "0.7.0", optional = true }
netlink-packet-route = { version = "0.17.0", optional = true }
netlink-proto = { version = "0.11.2", optional = true }
rtnetlink = { version = "0.13.0", optional = true }
xenstore-rs = { version = "0.3.4", optional = true }
xenstore-sys = { version = "=0.1.2", optional = true }
async-stream = "0.3.4"
os_info = { version = "3", default-features = false }
pnet_datalink = { version = "*", optional = true }
pnet_base = { version = "*", optional = true }
ipnetwork = { version = "*", optional = true }
log = "0.4.0"

[target.'cfg(unix)'.dependencies]
uname = "0.1.1"

[features]
default = ["xenstore", "net_netlink"]
xenstore = ["dep:xenstore-rs"]
net_netlink = ["dep:netlink-proto", "dep:netlink-packet-core", "dep:netlink-packet-route",
               "dep:rtnetlink"]
net_pnet = ["dep:pnet_datalink", "dep:pnet_base", "dep:ipnetwork"]

[profile.release]
lto = true
